--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # meupacote
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/beatrizmilz/meupacote082021/workflows/R-CMD-check/badge.svg)](https://github.com/beatrizmilz/meupacote082021/actions)
 <!-- badges: end -->
 
 The goal of meupacote is to ...
